<resources>
    <string name="app_name">Rutas Managua</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Cerrar sesión</string>

    <string name="action_add_favourite">Publicar denuncia</string>
    <string name="action_play_next">Agregar a mis favoritos</string>
    <string name="backdrop_title">Rutas de Managua</string>
    <string name="backdrop_subtitle">recorra la ciudad sin contratiempos</string>

    <!--Strings create by developers-->
    <!--String for nav header-->

    <string name="nav_header_user">Nombre de usuario</string>
    <string name="nav_header_email">Correo</string>
    <string name="nav_header_status">Estado de la conexión</string>
    <string name="nav_header_content_description">imagen de perfil</string>

    <string name="action_delete_complaint">Eliminar denuncia</string>
    <string name="action_update_complaint">Modificar denuncia</string>

    <!--Titles of menu items-->
    <string name="menu_activity_main_bus">Rutas registradas</string>
    <string name="menu_activity_main_complaints">Denuncias y comentarios</string>
    <string name="menu_activity_main_profile">Mi perfil</string>
    <string name="menu_activity_main_favorite">Recorridos</string>
    <!--Titles of fragments-->
    <string name="title_for_bus_details_fragment"> Detalles de la ruta</string>
    <string name="title_for_comment_fragment">Registrar Denuncia</string>
    <string name="title_for_map_fragment">Registrar Nuevo recorrido</string>

    <!--Titles of status-->
    <string name="status_conn">Conectado</string>
    <string name="status_offline">Desconectado</string>
    <!--Titles of activities-->
    <string name="title_activity_new_comment">Publicar opinion</string>
    <string name="title_activity_new_travel">Nuevo recorrido</string>
    <string name="title_activity_new_bus">Registrar ruta</string>

    <string name="title_activity_new_complaint">Registrar denuncia</string>
    <string name="title_activity_view_bus">Detalles del bus</string>

    <string name="activity_maps_trace_route">Dibujar ruta</string>
    <string name="activity_maps_clean_map">Terminar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Nueva Ruta</string>

    <string name="filter_travel_for_bus_id">{\"where\":{\"bus_id\":\"%1$d\"}}</string>
    <string name="filter_route_for_travel_id">{\"where\":{\"travel_id\":\"%1$d\"}}</string>
    <string name="filter_commentary_for_bus_id">{\"where\":{\"bus_id\":\"%s\"}}</string>

    <dimen name="activity_new_complaint_padding_content">12dp</dimen>
    <string name="activity_new_complaint_title">Título</string>
    <string name="activity_new_complaint_description">Descripción</string>
    <string name="activity_new_complaint_to_post">Publicar</string>

    <string name="action_add_complaint">Denunciar</string>

    <!--activity_sing_in-->
    <string name="activity_sing_in_email">Correo electrónico</string>
    <string name="activity_sing_in_question">¿No tienes cuenta?</string>
    <string name="activity_sing_in_password">Contraseña</string>
    <string name="activity_sing_in_sign_up">REGISTRARME</string>
    <string name="activity_sing_in_button_title">ACCEDER</string>
    <string name="activity_sing_in_message_empty_email">No ha definido un correo</string>
    <string name="activity_sing_in_message_empty_password">No ha definido su contraseña</string>
    <string name="one_hour_ago">Hace 1 hora</string>
    <string name="activity_sing_in_title">LOGIN</string>
    <string name="message_without_connection">Error, sin conexión a internet</string>

    <string name="activity_sign_up_name">Nombre completo</string>
    <string name="activity_sign_up_username">Nombre de usuario</string>
    <string name="activity_sign_up_email">Correo electrónico</string>
    <string name="activity_sign_up_password">Contraseña</string>
    <string name="activity_sing_up_empty_fields_message">Todos los campos son requeridos.</string>

    <string name="delete_commentary_for_bus_id">{\"where\":{\"bus_id\":\"%s\"}}</string>

</resources>
