<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:screenOrientation="portrait"
    tools:context="com.l3soft.routesmg.activities.ComplaintActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <android.support.design.widget.CheckableImageButton
                android:id="@+id/add_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/ic_default_image_complaint"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_new_complaint_padding_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:maxLength="35"
                        android:hint="@string/activity_new_complaint_title" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/description"
                        android:maxLength="185"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_new_complaint_description" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_layout"
                android:layout_marginRight="@dimen/padding_layout"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/activity_new_complaint_to_post"
                android:theme="@style/RaisedButton" />

        </LinearLayout>




    </ScrollView>

</FrameLayout>