<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:scrollbars="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/profile"
            app:civ_border_color="@color/blue"
            android:layout_marginBottom="24dp"
            android:layout_height="130dp"
            android:layout_width="130dp"
            android:layout_gravity="center_horizontal"
            app:civ_border_width="2dp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/activity_sing_colorPrimaryDark">

            <EditText
                android:id="@+id/nameSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/activity_sing_colorPrimaryDark"
                android:inputType="textCapWords"
                android:hint="@string/activity_sign_up_name"
                app:backgroundTint="@color/activity_sing_colorPrimaryDark"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/activity_sing_colorPrimaryDark">

            <EditText
                android:id="@+id/userNameSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/activity_sing_colorPrimaryDark"
                android:inputType="textCapWords"
                android:hint="@string/activity_sign_up_username"
                app:backgroundTint="@color/activity_sing_colorPrimaryDark"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/activity_sing_colorPrimaryDark">

            <EditText
                android:id="@+id/emailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/activity_sing_colorPrimaryDark"
                android:inputType="textEmailAddress"
                android:hint="@string/activity_sign_up_email"
                app:backgroundTint="@color/activity_sing_colorPrimaryDark"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/activity_sing_colorPrimaryDark">

            <EditText
                android:id="@+id/passwordSignUp"
                android:layout_width="match_parent"
                android:textColor="@color/activity_sing_colorPrimaryDark"
                android:layout_height="wrap_content"
                android:hint="@string/activity_sign_up_password"
                android:inputType="textPassword"
                app:backgroundTint="@color/activity_sing_colorPrimaryDark"
                tools:ignore="RtlHardcoded,TextFields" />

        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:theme="@style/RaisedButton"
            android:text="Crear cuenta"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="¿Ya eres usuario? Inicia sesión"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>